added description regarding the project in README.MD file